[package]
name = "mantaray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_with = { version = "2.0.0", features = ["hex"] }
hex = "0.4.3"
const_format = "0.2.26"
rand = "0.8.5"
tokio = { version = "1.20.1", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
futures = "0.3.21"
async-recursion = "1.0.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
async-trait = "0.1.57"

[dev-dependencies]
test-case = "2.2.1"